# Promptwars-Challenge-3

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  DUAL_SUBMISSION.md  Dockerfile  LICENSE  README.md  docker-compose.yml  nginx.conf  rules.md
.github/workflows/: ci.yml
backend/: pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  config.py  main.py  models.py  schemas.py
backend/app/carbon/: __init__.py  engine.py  factors.py  gamification.py
backend/app/controllers/: __init__.py  climatiq_controller.py  flights_controller.py  footprint_controller.py  insight_controller.py  routes_controller.py
backend/app/insights/: __init__.py  gemini.py  rules.py
backend/app/repository/: __init__.py  firestore_repo.py  memory_repo.py
backend/app/routes/: __init__.py  calculate.py  entries.py  gamification.py  health.py  insights.py  whatif.py
backend/tests/: conftest.py  test_api.py  test_calculator.py  test_config.py  test_deps.py  test_firestore_repo.py  test_gamification.py  test_gemini.py  test_location.py  test_memory_repo.py  test_models.py  test_rules.py  test_spa.py  test_zero_hardcoding.py
docs/: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  remember.md
frontend/: index.html  next.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
frontend/src/: App.tsx
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: AILogger.tsx  AnimatedNumber.tsx  CalculatorForm.tsx  CarbonCard.tsx  Dashboard.tsx  EquivalencyDisplay.tsx  FlightCalculator.tsx  GamificationPanel.tsx  Header.tsx  HistoryPanel.tsx  InsightPanel.tsx  InsightsPanel.tsx  LocationPicker.tsx  NumberField.tsx  OnboardingFlow.tsx  ParticleCanvas.tsx  ResultBreakdown.tsx  RouteCalculator.tsx  TransitCalculator.tsx  WhatIfSimulator.tsx
frontend/src/hooks/: useFootprint.ts  useWhatIf.ts
frontend/src/lib/: api.ts  deviceId.ts  format.ts  schemas.ts  types.ts
frontend/src/styles/: theme.css
frontend/src/test/: App.test.tsx  CalculatorForm.test.tsx  CarbonCard.test.tsx  EquivalencyDisplay.test.tsx  GamificationPanel.test.tsx  HistoryPanel.test.tsx  InsightsPanel.test.tsx  NumberField.test.tsx  ResultBreakdown.test.tsx  WhatIfSimulator.test.tsx  (+5 more)
helper md files/: CHANGELOG.md  CONTRIBUTING.md
