[project]
name = "carbon-platform"
version = "1.0.0"
description = "Carbon Footprint Awareness Platform API"
requires-python = ">=3.11"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=90 -v"
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.mypy]
strict = true
ignore_missing_imports = true
warn_unreachable = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "RUF", # ruff specific
]
ignore = [
    "B008",  # Depends() in FastAPI
    "E501",  # Line too long (we use long dynamic f-strings)
    "W291",  # Trailing whitespace
    "W293",  # Blank line whitespace
    "I001",  # Unsorted imports
    "UP017", # datetime.timezone.utc usage
    "F401",  # Unused imports
    "RUF003",# Ambiguous characters
    "UP035", # Deprecated imports
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
